# COSC473-Pet-Questing-Blockchain-App

./: README.md
loot20/.github/workflows/: test.yml
loot20/src/: contract.rs
pet-quest-contract/: Cargo.toml  Makefile  README.md
pet-quest-contract/src/: contract.rs  lib.rs  loot20.rs  msg.rs  pet721.rs  randomness.rs  state.rs
pet-quest-contract/tests/: integration.ts  package-lock.json  package.json
pet-quest-front-end/: .env  next.config.js  package-lock.json  package.json
pet-quest-front-end/src/components/: AppContainer.tsx  BattlesContainer.tsx  MainContainer.tsx  PetBattleContainer.tsx  PetContainer.tsx  QuestContainer.tsx  QuestHistoryContainer.tsx  SideBar.tsx  Stat.tsx
pet-quest-front-end/src/contractInterface/: contractContext.tsx  contractError.ts  contractFunctions.ts
pet-quest-front-end/src/icons/: BalanceIcon.tsx  ClashIcon.tsx  CoinIcon.tsx  SetupIcon.tsx
pet-quest-front-end/src/logic/: format.ts  pet_style.ts
pet-quest-front-end/src/pages/: index.tsx
pet721/src/: contract.rs
uploader/: package-lock.json  package.json
uploader/src/: full_setup.ts
uploader/typescript-nodejs-template-master/: package.json
